2025-03-10 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Add rector rule for migrating "group" property
    * Release version 8.0.1

2025-03-07 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Avoid error in case of missing sorting field

2025-03-04 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Release version 8.0.0

2025-02-28 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Add possibility to disable a configuration, resolves #365

2025-02-26 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Store user name rather than uid in log records, resolves #363
    * Restore visual cue for ordering, resolves #364
    * Suggest usage of coalesce operator in isEmpty property, resolves #357
    * Highlight relation between children property and IRRE-type fields, resolves #335
    * Consider relation-type fields with no minimum items to be nullable, resolves #337

2025-02-24 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow import reaction to target configuration group, resolves #367

2025-02-05 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Make it possible to put configuration into several groups, resolves #366

2025-01-20 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Migrate all tests to typo3/testing-framework, resolves #359

2025-01-10 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Update datatables, drop RequireJS, use Luxon instead of Moment, resolves #358

2025-01-02 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Drop Extbase usage for logs, resolves #362

2024-12-31 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Adapt to changes in connector services 6.0.0, resolves #351

2024-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Add a delete reaction, resolves #361
    * Avoid accessing substructure when not of the expected type, resolves #360
    * Release version 7.3.0

2024-11-24 Francois Suter (Idéative)  <typo3@ideative.ch>
