@@ -1,3 +1,7 @@
+2025-03-19 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Properly handle action class when adding a new Scheduler task in TYPO3 13, resolves #370
+
 2025-03-10 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Add rector rule for migrating "group" property
